# rust_prjo

./: .gitignore  Cargo.toml  Flux2-Klein人像精修_高清放大_保留光影.json  README.md  build.ps1  build.rs  rust-toolchain.toml
assets/wedding/_golden/: g1_full_warm_2_bbshopen01.md  g2_full_natural_1_bbshopen01.md  g3_medium_overcast_2_scatter05.md  g4_closeup_natural_1_field01.md  g5_full_warm_2_jiaoshi01.md  g6_medium_natural_2_jiaoshi06.md  rank_closeup_bbsh.txt  rank_full_all.txt  rank_full_jiaoshi.txt  rank_medium_bbsh.txt
assets/wedding/scenes/: catalog.json  series_profiles.json
assets/wedding/templates/: 人物入景_双图暖金版.md
doc/: RunningHub桌面程序实现方案.md  rh_batch.py  使用文档.md  打包与安装指南.md  景别判定与QC手册.md  项目现状与架构分析.md
src/: api.rs  cmode.rs  cstate.rs  foursapi.rs  main.rs  workflow.rs
tips/: gpt-image-2  图片理解  图片编辑edits  用户设置  获取个人信息
